[package]
name = "brush-cli"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# Library used by brush-app, plus a lean headless binary for quick iteration.
[[bin]]
name = "brush-cli"
path = "src/main.rs"

[dependencies]
brush-async.path = "../../crates/brush-async"
brush-process.path = "../../crates/brush-process"
brush-dataset.path = "../../crates/brush-dataset"
brush-mesh.path = "../../crates/brush-mesh"
brush-render.path = "../../crates/brush-render"
brush-serde.path = "../../crates/brush-serde"
brush-vfs.path = "../../crates/brush-vfs"
burn.workspace = true
glam.workspace = true
image.workspace = true
wgpu.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
pollster = "0.4"

indicatif.workspace = true
indicatif-log-bridge = "0.2"
clap.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
humantime.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true

# The binary needs a multi-thread runtime; the lib alone doesn't.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]
