[package]
name = "brush-cli"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# Library used by brush-app, plus a lean headless binary for quick iteration.
[[bin]]
name = "brush-cli"
path = "src/main.rs"

[dependencies]
brush-async.path = "../../crates/brush-async"
brush-process.path = "../../crates/brush-process"

indicatif.workspace = true
indicatif-log-bridge = "0.2"
clap.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
humantime.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true

# The binary needs a multi-thread runtime; the lib alone doesn't.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true

# clap_mangen powers `examples/gen-man.rs`, which regenerates the man page from
# the live clap command. Dev-dependency only — never linked into the binary.
[dev-dependencies]
clap_mangen = "0.2"

[[example]]
name = "gen-man"
path = "examples/gen-man.rs"

[package.metadata.cargo-shear]
ignored = ["getrandom"]
