[package]
name = "brush-js"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[lib]
name = "brush_js"
crate-type = ["cdylib", "rlib"]

[dependencies]
brush-process.path = "../../crates/brush-process"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
getrandom = { version = "0.4", features = ["wasm_js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom", "wasm-bindgen-futures"]
