[package]
name = "brush-app"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

# Lib for android NDK.
[lib]
name = "main"
crate-type = ["cdylib", "rlib"]

# Bin for desktop platforms.
[[bin]]
name = "brush_app"
path = "src/bin.rs"

[features]
default = ["training"]

training = ["brush-cli/training", "brush-process/training", "brush-ui/training"]
tracy = ["dep:tracing-subscriber", "dep:tracing-tracy"]
debug-validation = ["brush-render/debug-validation", "brush-ui/debug-validation"]


[dependencies]
# Brush deps.
brush-ui.path = "../brush-ui"
brush-render.path = "../brush-render"
brush-vfs.path = "../brush-vfs"
brush-process = { path = "../brush-process" }

burn-wgpu.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

egui.workspace = true
eframe.workspace = true

anyhow.workspace = true
tracing.workspace = true
log.workspace = true

tracing-subscriber = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }



[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", features = ["android-game-activity"] }

rrfd.path = "../rrfd"
tokio = { workspace = true, features = ["io-util", "rt", "rt-multi-thread"] }

android_logger = "0.15.0"
jni = "0.21.1"

# On desktop platforms
[target.'cfg(any(target_family = "unix", target_family = "windows"))'.dependencies]
winit = { version = "0.30", features = ["default"] }
clap.workspace = true
env_logger.workspace = true
brush-cli.path = "../brush-cli"
tokio = { workspace = true, features = ["io-util", "rt", "rt-multi-thread"] }

[target.'cfg(target_family = "windows")'.dependencies]
winapi.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
