[package]
name = "brush-bench-test"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render = { path = "../brush-render", features = ["debug-validation"] }
brush-render-bwd.path = "../brush-render-bwd"
brush-train.path = "../brush-train"
brush-dataset.path = "../brush-dataset"

anyhow.workspace = true
image.workspace = true
glam.workspace = true
log.workspace = true
burn = { workspace = true, features = ["autodiff"] }
burn-cubecl.workspace = true
burn-wgpu.workspace = true
rand.workspace = true

divan = "0.1.17"
safetensors.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
brush-rerun = { path = "../brush-rerun" }
rerun = { workspace = true }

[dev-dependencies]
brush-kernel = { path = "../brush-kernel" }
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[[bench]]
name = "training_bench"
harness = false
path = "src/training_bench.rs"

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]
