[package]
name = "brush-cli"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-process.path = "../brush-process"
brush-vfs.path = "../brush-vfs"

indicatif.workspace = true
clap.workspace = true
burn-wgpu.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
humantime.workspace = true
log.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
