[package]
name = "brush-cli"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[features]
training = ["brush-process/training"]

[dependencies]
brush-process.path = "../brush-process"
brush-vfs.path = "../brush-vfs"

indicatif.workspace = true
clap.workspace = true
burn-wgpu.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
humantime.workspace = true
log.workspace = true
anyhow.workspace = true

[lints]
workspace = true
