[package]
name = "brush-cli"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[features]
training = ["brush-process/training"]

[dependencies]
brush-process.path = "../brush-process"
brush-vfs.path = "../brush-vfs"

indicatif.workspace = true

indicatif-log-bridge = "0.2"
clap.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
humantime.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true

[lints]
workspace = true
