[package]
name = "brush-ffi"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
brush-vfs.path = "../brush-vfs"
brush-process = { path = "../brush-process" }

burn-wgpu.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.23.0"
