[package]
name = "brush-fused-ssim"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"

burn = { workspace = true, features = ["autodiff"] }
burn-cubecl.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true
burn-wgpu.workspace = true
half = "2"

[dev-dependencies]
brush-kernel = { path = "../brush-kernel" }
tokio = { workspace = true, features = ["macros", "rt"] }
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]
