[package]
name = "brush-ios"
version = "0.1.0"
edition = "2021"

[lib]
name = "brush_ios"
crate-type = ["staticlib"]

[dependencies]
log = "0.4"
env_logger = "0.11"
brush-viewer = { path = "../brush-viewer"}
brush-train = { path = "../brush-train"}
rrfd = { path = "../rrfd", features = ["ios"] }
eframe = { git = "https://github.com/emilk/egui/", rev = "5bfff316c9818b3c140d02bb6cdc488556d46ab7", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
] }
raw-window-handle = "0.6.2"
tokio_with_wasm = { workspace = true, features = ["rt"] }
tokio = { workspace = true, features = ["io-util", "rt"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"

[package.metadata]
cargo-xcode = { ios-target = "aarch64-apple-ios" } 

[package.metadata.ios]
deployment_target = "14.0"

[package.metadata.bundle]
identifier = "com.fantasyfish.brush"
name = "Brush"