[package]
name = "brush-kernel"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-wgsl.path = "../brush-wgsl"
burn.workspace = true
burn-cubecl.workspace = true
bytemuck.workspace = true
wgpu.workspace = true
naga = { version = "26", features = ["wgsl-in", "wgsl-out"] }

[lints]
workspace = true
