[package]
name = "brush-kernel"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-kernel-proc.path = "../brush-kernel-proc"
burn.workspace = true
burn-cubecl.workspace = true
bytemuck = { workspace = true, features = ["derive"] }

[lints]
workspace = true
