[package]
name = "brush-loss"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"

burn = { workspace = true, features = ["autodiff"] }
burn-cubecl.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true
burn-wgpu.workspace = true
glam.workspace = true

[dev-dependencies]
brush-cube = { path = "../brush-cube" }
divan = "0.1.17"
tokio = { workspace = true, features = ["macros", "rt"] }
wasm-bindgen-test = "0.3"

[[bench]]
name = "loss_bench"
harness = false
path = "benches/loss_bench.rs"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]
