[package]
name = "brush-mesh"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-cube.path = "../brush-cube"
brush-dataset.path = "../brush-dataset"

hashbrown.workspace = true

burn.workspace = true
burn-cubecl.workspace = true
burn-wgpu.workspace = true
glam.workspace = true
rayon.workspace = true
log.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "rt"] }

[dev-dependencies]
brush-cube = { path = "../brush-cube", features = [] }
brush-serde.path = "../brush-serde"
rand.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
