
[package]
name = "brush-msg"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-dataset.path = "../brush-dataset"
rrfd.path = "../rrfd"

# Workspace deps.
glam.workspace = true
burn.workspace = true

web-time.workspace = true

anyhow.workspace = true

tokio = { workspace = true, features = ["io-util", "rt"] }
tokio-util.workspace = true
tokio-stream.workspace = true

reqwest.workspace = true
clap.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys.workspace = true

[lints]
workspace = true
