[package]
name = "brush-prefix-sum"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-kernel.path = "../brush-kernel"
brush-wgsl.path = "../brush-wgsl"
burn.workspace = true
burn-wgpu.workspace = true
burn-cubecl.workspace = true

[lints]
workspace = true
