[package]
name = "brush-render-bwd"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-kernel.path = "../brush-kernel"
brush-render.path = "../brush-render"
brush-wgsl.path = "../brush-wgsl"

burn = { workspace = true, features = [
    'wgpu',
    'autodiff',
] }
burn-wgpu.workspace = true
burn-cubecl.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true

wgpu.workspace = true
bytemuck.workspace = true
glam.workspace = true
tracing.workspace = true

[lints]
workspace = true
