[package]
name = "brush-render"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
brush-cube.path = "../brush-cube"
brush-prefix-sum.path = "../brush-prefix-sum"
assert_approx_eq.workspace = true
brush-sort.path = "../brush-sort"

burn.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
burn-wgpu.workspace = true
burn-cubecl.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true

glam.workspace = true
clap.workspace = true
serde.workspace = true
tracing.workspace = true
log.workspace = true
futures-lite = "2"
parking_lot = { version = "0.12", features = ["send_guard"] }

tokio = { workspace = true, features = ["macros", "rt"] }

[features]
debug-validation = []

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]
