[package]
name = "brush-render"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
brush-cube.path = "../brush-cube"
brush-prefix-sum.path = "../brush-prefix-sum"
brush-sort.path = "../brush-sort"

burn.workspace = true
burn-wgpu.workspace = true
burn-cubecl.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true

assert_approx_eq.workspace = true
glam.workspace = true
clap.workspace = true
serde.workspace = true
tracing.workspace = true
log.workspace = true
bytemuck.workspace = true

tokio = { workspace = true, features = ["macros", "rt", "sync"] }

[features]
debug-validation = []

# Pick exactly one wgpu sub-feature per target so burn-dispatch's
# build.rs uses Vulkan/Metal (u8 bools) on native and WebGpu (u32) on wasm,
# instead of silently falling back to WebGpu when multiple are enabled.
[target.'cfg(target_os = "macos")'.dependencies]
burn = { workspace = true, features = ["metal"] }

[target.'cfg(target_family = "wasm")'.dependencies]
burn = { workspace = true, features = ["webgpu"] }

[target.'cfg(all(not(target_os = "macos"), not(target_family = "wasm")))'.dependencies]
burn = { workspace = true, features = ["vulkan"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]
