[package]
name = "brush-render"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
brush-cube.path = "../brush-cube"
brush-prefix-sum.path = "../brush-prefix-sum"
brush-sort.path = "../brush-sort"

burn.workspace = true
burn-wgpu.workspace = true
burn-cubecl.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true

assert_approx_eq.workspace = true
glam.workspace = true
clap.workspace = true
serde.workspace = true
tracing.workspace = true
log.workspace = true
bytemuck.workspace = true

tokio = { workspace = true, features = ["macros", "rt", "sync"] }

[features]
debug-validation = []

# Backend selection per platform:
# - Linux/Windows: `webgpu` feature → WGSL codegen, swapped away from `vulkan`
#   to escape the SPIR-V/cubecl-vulkan crash class (#395, #423).
# - macOS: keep `metal` (direct MSL codegen via cubecl_cpp). The `webgpu`
#   feature on macOS routes through WGSL→Naga→MSL and currently emits a broken
#   SSIM kernel (loss=0 — caught by `ssim_identical_inputs_is_one`).
# - wasm: `webgpu` is the only option in-browser.
[target.'cfg(target_os = "macos")'.dependencies]
burn = { workspace = true, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
burn = { workspace = true, features = ["webgpu"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]
