[package]
name = "rrfd"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
jni = "0.21.1"
lazy_static = "1.5.0"
anyhow.workspace = true
tokio.workspace = true
objc = { version = "0.2.7", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rfd = "0.12.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"

[features]
ios = ["dep:objc"]
